# libFLACforMCU

./: CMakeLists.c  CMakeLists.txt  libFLACemb.code-workspace
source/: bitmath.c  bitreader.c  bitwriter.c  buildtest.c  compat.c  cpu.c  crc.c  fixed.c  float.c  format.c  lpc.c  md5.c  memory.c  metadata_iterators.c  metadata_object.c  stream_decoder.c  stream_encoder.c  stream_encoder_framing.c  window.c
source/include/: alloc.h  assert.h  bitmath.h  bitreader.h  bitwriter.h  callback.h  compat.h  cpu.h  crc.h  endswap.h  fixed.h  float.h  format.h  lpc.h  macros.h  md5.h  memory.h  metadata.h  stream_decoder.h  stream_encoder.h  stream_encoder_framing.h  window.h
source/include/private/: cpu.h
utest/: utest.cpp
